# Open-Linux-Course

./: .gitignore  README.md
assembly-utility/: canvas_assembly_utility.py
lectures/ru/: module_1_article_10_ispolzovaniie-v-kachiestvie-sierviernoi-os-i-stabilnost.md  module_1_article_1_chto-takoie-opieratsionnaia-sistiema.md  module_1_article_2_niemnogho-istorii.md  (+98 more)
task-checker/: CMakeLists.txt  README.md  compile.sh  compile_debug.sh  compile_without_integration.sh  config.h  debug_info.h  integration.c  integration.h  integration_openolat.c  integration_openolat.h  main.c  task_list.h
task-checker/tasks/: task.h
task-checker/tasks/easter/: 2048.c  2048.h  blackjack.c  blackjack.h  cmatrix.c  cmatrix.h  easter_main.c  easter_main.h  main_blackjack.c  main_blackjack.h  main_snake.c  main_snake.h  minisweeper.c  minisweeper.h  minisweeper_aux.c  minisweeper_def.h  minisweeper_menu.c  minisweeper_score.c  snake.c  snake.h  tetris.c  tetris.h  tictactoe.c  tictactoe.h
task-checker/tasks/eighth/: eighth.h
task-checker/tasks/fifth/: fifth.h
task-checker/tasks/first/: first.h
task-checker/tasks/fourth/: fourth.h
task-checker/tasks/logos/: tux.h  we.h
task-checker/tasks/ninth/: ninth.h
task-checker/tasks/second/: second.h
task-checker/tasks/seventh/: seventh.h
task-checker/tasks/sixth/: sixth.h
task-checker/tasks/third/: third.h
task-checker/tasks/zero/: zero.c  zero.h
virtual-machine-ssh/: Vagrantfile  index.php  migrations.sql  secret  test.txt
webuihelper/: Dockerfile  docker-compose.yml  manage.py  requirements.txt  start.sh
(+136 files in other folders)
